// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments_arguments.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

query (
  $string: String, # Some variable comment
  $bool: Boolean # Some comment
  #  end of line
   , # own line # own line
 ) {
   someField
 }

# test idempotency
query (
  $string: String # Some variable comment
  $bool: Boolean # Some comment
  #  end of line
  # own line # own line
) {
  someField
}

{
  foo # info about foo
  {
    bar # info about bar
  }
}

{
  foo { # info about foo
    bar # info about bar
  }
}

=====================================output=====================================
query (
  $string: String # Some variable comment
  $bool: Boolean # Some comment
  #  end of line
  # own line # own line
) {
  someField
}

# test idempotency
query (
  $string: String # Some variable comment
  $bool: Boolean # Some comment
  #  end of line
  # own line # own line
) {
  someField
}

{
  foo # info about foo
  {
    bar # info about bar
  }
}

{
  foo {
    # info about foo
    bar # info about bar
  }
}

================================================================================
`;

exports[`comments_types.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Query
 {    # comment 
   someField: String # field comment
  
    # another field comment
  anotherField:  Boolean!
}

# test idempotency
type Query { # comment
  someField: String # field comment
  # another field comment
  anotherField: Boolean!
}

=====================================output=====================================
type Query { # comment
  someField: String # field comment
  # another field comment
  anotherField: Boolean!
}

# test idempotency
type Query { # comment
  someField: String # field comment
  # another field comment
  anotherField: Boolean!
}

================================================================================
`;

exports[`fields.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
query { 
  someField # Trailing comment
}



=====================================output=====================================
query {
  someField # Trailing comment
}

================================================================================
`;

exports[`interfaces.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Type1
implements
A & B &
# comment 1
                 C & D &
# comment 2
 E {a: a}

=====================================output=====================================
type Type1 implements A & B &
# comment 1
C & D &
# comment 2
E {
  a: a
}

================================================================================
`;

exports[`tokens.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# import "./claimsFragment.gql"

query claimsByBookingReferenceAndLastName($bookingReference: String!, $lastName: String!) {
  claimsByBookingReferenceAndLastName(bookingReference: $bookingReference, lastName: $lastName) {
    ... claim
  }
}

=====================================output=====================================
# import "./claimsFragment.gql"

query claimsByBookingReferenceAndLastName(
  $bookingReference: String!
  $lastName: String!
) {
  claimsByBookingReferenceAndLastName(
    bookingReference: $bookingReference
    lastName: $lastName
  ) {
    ...claim
  }
}

================================================================================
`;
